--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ h1 {
     font-weight: 400;
 }
 
+p {
+        font-size: 16px;
+    }
+    
 .Preparation {
     background-color: hsl(330, 100%, 98%);
     padding: 6px;
@@ -125,7 +129,7 @@ td.fat {
     }
 
     img {
-        width: 422px;
+        width: 452px;
         margin: auto;
         border-radius: 0;
         margin-bottom: 22px;
